[gd_scene load_steps=5 format=3 uid="uid://fe4uunjh2r4a"]

[ext_resource type="Texture2D" uid="uid://cl3nktlqu747p" path="res://assets/textures/kenney_ui-pack-rpg-expansion/PNG/buttonSquare_brown.png" id="1_gh5eo"]
[ext_resource type="Texture2D" uid="uid://blocbouydvwko" path="res://assets/textures/kenney_ui-pack-rpg-expansion/PNG/buttonSquare_brown_pressed.png" id="2_kwbnh"]
[ext_resource type="Script" uid="uid://d2uady1mcqusq" path="res://scripts/cooking/food_slot.gd" id="3_10ak5"]
[ext_resource type="Script" uid="uid://car26nd76ssab" path="res://scenes/ui/button_hover_effect.gd" id="4_teouj"]

[node name="FoodSlot" type="MarginContainer"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
script = ExtResource("3_10ak5")

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 2
texture_normal = ExtResource("1_gh5eo")
texture_pressed = ExtResource("2_kwbnh")
stretch_mode = 5
script = ExtResource("4_teouj")

[node name="FoodLabel" type="Label" parent="TextureButton"]
visible = false
layout_mode = 0
offset_right = 47.0
offset_bottom = 49.0

[node name="FoodTexture" type="TextureRect" parent="TextureButton"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_right = 15.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 3

[connection signal="pressed" from="TextureButton" to="." method="_on_pressed"]
[connection signal="mouse_entered" from="TextureButton/FoodTexture" to="." method="play_button_hover_sfx"]
